Merged revisions 8814-8835 via svnmerge from https://svn.terracotta.org/repo/tc/dso/trunk